# NanoLLM

./: .gitignore  README.md  eval_model.py  hello.py  my_model.pt  pyproject.toml  test_wandb.py  train_full_sft.py  train_pretrain.py
demo/: data.py  test_wandb.py  tok.py
model/: LMConfig.py  bpe.py  dataset.py  model.py  model_lora.py
model/nano_tokenizer/: merges.txt  tokenizer.json  vocab.json
scripts/: train_tokenizer.py
wandb/: latest-run
wandb/run-20250311_221307-50du3kwo/: run-50du3kwo.wandb
wandb/run-20250311_221307-50du3kwo/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20250311_221325-h88d7o6s/: run-h88d7o6s.wandb
wandb/run-20250311_221325-h88d7o6s/files/: config.yaml  wandb-metadata.json
wandb/run-20250311_221325-vl8vitgz/: run-vl8vitgz.wandb
wandb/run-20250311_221325-vl8vitgz/files/: config.yaml  wandb-metadata.json
wandb/run-20250311_221415-5g8naw3j/: run-5g8naw3j.wandb
wandb/run-20250311_221415-5g8naw3j/files/: config.yaml  wandb-metadata.json
wandb/run-20250311_221418-0fo8h863/: run-0fo8h863.wandb
wandb/run-20250311_221418-0fo8h863/files/: config.yaml  wandb-metadata.json
wandb/run-20250311_221418-hx4qz0oz/: run-hx4qz0oz.wandb
wandb/run-20250311_221418-hx4qz0oz/files/: config.yaml  wandb-metadata.json
wandb/run-20250311_221706-7vzgh1c1/: run-7vzgh1c1.wandb
wandb/run-20250311_221706-7vzgh1c1/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250311_221714-qtf0oiig/: run-qtf0oiig.wandb
wandb/run-20250311_221723-t2srzzqe/: run-t2srzzqe.wandb
(+9 files in other folders)
