[project]
name = "nanollm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.4.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "trl>=0.15.2",
    "wandb>=0.19.8",
]
